View Braço Curto

--- a/Decodificador de Texto/index.html
+++ b/Decodificador de Texto/index.html
@@ -16,6 +16,7 @@
   <header>
     <img src="img/Vector.png" alt="">
     <div class="botaoo"></div>
+    <!-- view é braço curto -->
   </header>
 
   <main>
